[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://core/education/BrainSystemSwitcher.gd" id="1_a5ldk"]
[ext_resource type="Script" path="res://core/education/ComparativeAnatomyService.gd" id="2_r2tub"]
[ext_resource type="Script" path="res://core/education/LearningPathwayManager.gd" id="3_jxn5n"]
[ext_resource type="Script" path="res://core/education/EducationalModuleCoordinator.gd" id="4_n8ehg"]

[node name="EducationalModulesDemo" type="Node3D"]

[node name="BrainModelContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2, 4)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="EducationalSystems" type="Node" parent="."]

[node name="BrainStructureSelectionManager" type="Node" parent="EducationalSystems"]

[node name="BrainSystemSwitcher" type="Node" parent="EducationalSystems"]
script = ExtResource("1_a5ldk")
default_transition_style = 2
show_educational_context = true
educational_detail = 3

[node name="ComparativeAnatomyService" type="Node" parent="EducationalSystems"]
script = ExtResource("2_r2tub")
default_comparison_type = 0
default_annotation_style = 3
educational_detail = 2

[node name="LearningPathwayManager" type="Node" parent="EducationalSystems"]
script = ExtResource("3_jxn5n")
default_difficulty = 0
track_progress = true
enable_recommendations = true
adaptive_difficulty = true
enforce_prerequisites = false

[node name="EducationalModuleCoordinator" type="Node" parent="EducationalSystems"]
script = ExtResource("4_n8ehg")
default_mode = 0
auto_suggest_content = true
collect_analytics = true
enable_system_switching = true
enable_comparative_anatomy = true
enable_learning_pathways = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ControlPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -400.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Educational Module Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="SystemSwitchLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Brain System Switching"

[node name="SystemButtons" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="WholeButton" type="Button" parent="UI/ControlPanel/VBoxContainer/SystemButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Whole"

[node name="HalfButton" type="Button" parent="UI/ControlPanel/VBoxContainer/SystemButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Half"

[node name="InternalButton" type="Button" parent="UI/ControlPanel/VBoxContainer/SystemButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Internal"

[node name="HSeparator2" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="ComparativeLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Comparative Anatomy"

[node name="ComparisonTypeOption" type="OptionButton" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Functional Comparison"
popup/item_0/id = 0
popup/item_1/text = "Pathological Comparison"
popup/item_1/id = 1
popup/item_2/text = "Developmental Comparison"
popup/item_2/id = 2
popup/item_3/text = "Species Comparison"
popup/item_3/id = 3

[node name="CompareButton" type="Button" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Compare Selected Structures"

[node name="HSeparator3" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="PathwayLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Learning Pathways"

[node name="PathwayOption" type="OptionButton" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Basic Neuroanatomy"
popup/item_0/id = 0
popup/item_1/text = "Limbic System"
popup/item_1/id = 1
popup/item_2/text = "Clinical Cases: Basal Ganglia"
popup/item_2/id = 2

[node name="StartPathwayButton" type="Button" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Start Learning Pathway"

[node name="HSeparator4" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="SessionLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Educational Session"

[node name="SessionButtons" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/ControlPanel/VBoxContainer/SessionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="EndButton" type="Button" parent="UI/ControlPanel/VBoxContainer/SessionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "End"

[node name="InfoPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -400.0
offset_right = 300.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Structure Information"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="StructureNameLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "No structure selected"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Select a structure to view information."
autowrap_mode = 3

[node name="FunctionsTitleLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Functions:"

[node name="FunctionsTextLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="ClinicalTitleLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Clinical Relevance:"

[node name="ClinicalTextLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="RecommendationPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/RecommendationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="UI/RecommendationPanel/VBoxContainer"]
layout_mode = 2
text = "Educational Recommendation"
horizontal_alignment = 1

[node name="RecommendationTitle" type="Label" parent="UI/RecommendationPanel/VBoxContainer"]
layout_mode = 2
text = "No recommendation available"
horizontal_alignment = 1

[node name="RecommendationDescription" type="Label" parent="UI/RecommendationPanel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="ApplyButton" type="Button" parent="UI/RecommendationPanel/VBoxContainer"]
layout_mode = 2
text = "Apply Recommendation"

[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/SystemButtons/WholeButton" to="EducationalSystems/EducationalModuleCoordinator" method="switch_brain_system" binds= [0]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/SystemButtons/HalfButton" to="EducationalSystems/EducationalModuleCoordinator" method="switch_brain_system" binds= [1]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/SystemButtons/InternalButton" to="EducationalSystems/EducationalModuleCoordinator" method="switch_brain_system" binds= [2]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/CompareButton" to="EducationalSystems/EducationalModuleCoordinator" method="start_comparative_view" binds= [["hippocampus", "amygdala"], 0]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/StartPathwayButton" to="EducationalSystems/EducationalModuleCoordinator" method="start_learning_pathway" binds= ["basic_neuroanatomy"]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/SessionButtons/StartButton" to="EducationalSystems/EducationalModuleCoordinator" method="start_educational_session" binds= [0, {}]]
[connection signal="pressed" from="UI/ControlPanel/VBoxContainer/SessionButtons/EndButton" to="EducationalSystems/EducationalModuleCoordinator" method="end_educational_session"]