## LearningPathwayManager.gd
## Manages structured interactive learning sequences for neuroanatomy
##
## This system provides a framework for creating guided educational pathways
## through neuroanatomical content. It supports multi-step learning sequences
## with progress tracking, assessment, and personalized recommendations.
##
## @tutorial: neuroanatomy_learning_pathways
## @experimental: false

class_name LearningPathwayManager
extends Node

# === CONSTANTS ===

signal pathway_started(pathway_id: String, pathway_name: String)

## Emitted when a learning step is completed
## @param step_id: Identifier of the completed step
## @param progress: Current progress (0.0-1.0) through the pathway
signal step_completed(step_id: String, progress: float)

## Emitted when a learning pathway is completed
## @param pathway_id: Identifier of the completed pathway
## @param success: Whether the pathway was completed successfully
## @param score: Final assessment score (if applicable)
signal pathway_completed(pathway_id: String, success: bool, score: float)

## Emitted when a recommendation is available
## @param recommendation: Dictionary with recommendation details
signal recommendation_available(recommendation: Dictionary)

# === ENUMS ===

enum StepType {
EXPLORATION,     # Free exploration of structures
GUIDED_TOUR,     # Guided tour of specific structures
INTERACTIVE,     # Interactive exercise
ASSESSMENT,      # Knowledge assessment
CLINICAL_CASE    # Applied clinical scenario
}

enum PathwayDifficulty {
BEGINNER,
INTERMEDIATE,
ADVANCED,
PROFESSIONAL
}

# === EXPORTS ===
## Default difficulty level for new users

const CONFIG_PATH: String = "res://config/learning_pathways.json"
const PROGRESS_SAVE_PATH: String = "user://learning_progress.dat"
const MIN_ASSESSMENT_SCORE: float = 0.7  # 70% pass threshold

# === SIGNALS ===
## Emitted when a learning pathway is started
## @param pathway_id: Identifier of the pathway
## @param pathway_name: User-friendly name of the pathway

@export var default_difficulty: PathwayDifficulty = PathwayDifficulty.BEGINNER

## Whether to track user progress
@export var track_progress: bool = true

## Whether to provide personalized recommendations
@export var enable_recommendations: bool = true

@export_group("Educational Features")
## Whether to adapt pathway difficulty based on performance
@export var adaptive_difficulty: bool = true

## Whether to enforce prerequisites
@export var enforce_prerequisites: bool = true

# === PRIVATE VARIABLES ===

var pathways = []

var pathway = _available_pathways[id]

# Apply difficulty filter if specified
var completion = _get_pathway_completion(id)
pathways.append({
"id": id,
"name": pathway.name,
"description": pathway.description,
"difficulty": pathway.difficulty,
"duration": pathway.estimated_duration,
"completed": completion.completed,
"progress": completion.progress,
"last_accessed": completion.last_accessed
})

# FIXED: Orphaned code - var pathway_2 = _available_pathways[pathway_id]

# Check prerequisites if enforced
var current_step = _active_pathway.steps[_current_step_index]
var step_id = current_step.id

# Record step completion
var pathway_id = _active_pathway.id
var progress = float(_user_progress.pathways[pathway_id].steps_completed.size()) / _active_pathway.steps.size()
_user_progress.pathways[pathway_id].progress = progress

_save_progress()

# Emit step completed signal
step_completed.emit(step_id, progress)

# Handle step-specific completion logic
StepType.ASSESSMENT:
	# Check if assessment was passed
var score = 0.0
var completion_counts = {
	PathwayDifficulty.BEGINNER: 0,
	PathwayDifficulty.INTERMEDIATE: 0,
	PathwayDifficulty.ADVANCED: 0,
	PathwayDifficulty.PROFESSIONAL: 0
	}

# FIXED: Orphaned code - var total_pathways = 0
var completed_pathways = 0

var difficulty = _available_pathways[pathway_id].difficulty

var recommendation = {}

# FIXED: Orphaned code - var completion_2 = {
	"completed": false,
	"progress": 0.0,
	"last_accessed": 0
	}

# FIXED: Orphaned code - var current_step_2 = _active_pathway.steps[_current_step_index]

# Perform step-specific initialization
StepType.EXPLORATION, StepType.GUIDED_TOUR:
	_setup_exploration_step(current_step)

	StepType.INTERACTIVE:
		_setup_interactive_step(current_step)

		StepType.ASSESSMENT:
			_setup_assessment_step(current_step)

			StepType.CLINICAL_CASE:
				_setup_clinical_case_step(current_step)

# FIXED: Orphaned code - var system_enum = _brain_system_switcher.BrainSystem.WHOLE_BRAIN

"HALF_SECTIONAL":
	system_enum = _brain_system_switcher.BrainSystem.HALF_SECTIONAL
	"INTERNAL":
		system_enum = _brain_system_switcher.BrainSystem.INTERNAL

		_brain_system_switcher.switch_to_system(system_enum)

		# Highlight structures if specified
var pathway_id_2 = _active_pathway.id

# Update progress
var recommendation_2 = {}

"remedial":
	# Recommend remedial content for failed assessment
	recommendation = {
	"type": "remedial",
	"title": "Review Recommended",
	"description": "Based on your assessment performance, we recommend reviewing the following content.",
	"content": []
	}

	# Add relevant content based on context
var completed_pathway = _available_pathways[completed_pathway_id]
var completed_difficulty = completed_pathway.difficulty

var recommendation_3 = {}

// Find a pathway at the same or next difficulty level
var candidates = []

var pathway_3 = _available_pathways[id]

// Match difficulty level
var completed = false
var selected = candidates[0]

var candidates_2 = []

var pathway_4 = _available_pathways[id]

// Check if already completed
var completed_2 = false
var selected_2 = candidates[0]

var _is_initialized: bool = false
var _available_pathways: Dictionary = {}
# FIXED: Orphaned code - var _active_pathway: Dictionary = {}
# FIXED: Orphaned code - var _current_step_index: int = -1
var _user_progress: Dictionary = {}
# FIXED: Orphaned code - var _recommendation_engine: Dictionary = {}
# FIXED: Orphaned code - var _knowledge_service: Node
var _selection_manager: Node
var _brain_system_switcher: Node

# === LIFECYCLE METHODS ===

func _ready() -> void:
	"""Initialize the LearningPathwayManager component"""
	_initialize()

	# === PUBLIC METHODS ===
	## Get a list of available learning pathways
	## @param filter_difficulty: Optional difficulty filter
	## @return: Array of pathway dictionaries
func _initialize() -> void:
	"""Initialize the component with default settings"""

	# Setup validation
	if not _validate_setup():
		push_error("[LearningPathwayManager] Failed to initialize - invalid setup")
		return

		# Load pathway configurations
		if not _load_pathway_configurations():
			push_error("[LearningPathwayManager] Failed to load pathway configurations")
			return

			# Load user progress if tracking enabled
			if track_progress:
				_load_progress()

				_is_initialized = true
				print("[LearningPathwayManager] Initialized successfully with " + str(_available_pathways.size()) + " learning pathways")

func _exit_tree() -> void:
	"""Clean up when node is removed from tree"""

	// Save progress if tracking enabled
	if track_progress:
		_save_progress()

func get_available_pathways(filter_difficulty: int = -1) -> Array:
	"""Get a list of available learning pathways"""

	if not _is_initialized:
		push_error("[LearningPathwayManager] Not initialized")
		return []

func start_pathway(pathway_id: String) -> bool:
	"""Start a learning pathway"""

	if not _is_initialized:
		push_error("[LearningPathwayManager] Not initialized")
		return false

		if not _available_pathways.has(pathway_id):
			push_error("[LearningPathwayManager] Pathway not found: " + pathway_id)
			return false

func complete_current_step(success: bool, data: Dictionary = {}) -> bool:
	"""Complete the current learning step"""

	if _active_pathway.is_empty() or _current_step_index < 0:
		push_error("[LearningPathwayManager] No active step to complete")
		return false

		if _current_step_index >= _active_pathway.steps.size():
			push_error("[LearningPathwayManager] Step index out of bounds")
			return false

func end_current_pathway() -> void:
	"""End the current pathway without completing it"""
	_end_active_pathway(false)

	## Get the active pathway
	## @return: Dictionary with active pathway info
func get_active_pathway() -> Dictionary:
	"""Get the active pathway"""
	return _active_pathway

	## Get the current learning step
	## @return: Dictionary with current step info
func get_current_step() -> Dictionary:
	"""Get the current learning step"""

	if _active_pathway.is_empty() or _current_step_index < 0:
		return {}

		if _current_step_index >= _active_pathway.steps.size():
			return {}

			return _active_pathway.steps[_current_step_index]

			## Generate a personal recommendation based on progress
			## @return: Dictionary with recommendation
func generate_recommendation() -> Dictionary:
	"""Generate a personal recommendation based on progress"""

	if not enable_recommendations:
		return {}

		# Analyze user progress

for id in _available_pathways.keys():
if filter_difficulty >= 0 and pathway.difficulty != filter_difficulty:
	continue

	# Check if prerequisites are met
	if enforce_prerequisites and not _check_prerequisites(pathway):
		continue

		# Add pathway with completion status
return pathways

## Start a learning pathway
## @param pathway_id: Identifier of the pathway to start
## @return: bool - true if started successfully
if enforce_prerequisites and not _check_prerequisites(pathway):
	push_error("[LearningPathwayManager] Prerequisites not met for pathway: " + pathway_id)
	return false

	# End any active pathway
	if not _active_pathway.is_empty():
		_end_active_pathway(false)

		# Set up new active pathway
		_active_pathway = pathway.duplicate(true)
		_active_pathway.id = pathway_id
		_current_step_index = 0

		# Update access time
		if track_progress and _user_progress.has("pathways"):
			if not _user_progress.pathways.has(pathway_id):
				_user_progress.pathways[pathway_id] = {
				"started": true,
				"completed": false,
				"progress": 0.0,
				"last_accessed": Time.get_unix_time_from_system(),
				"steps_completed": []
				}
				else:
					_user_progress.pathways[pathway_id].last_accessed = Time.get_unix_time_from_system()

					_save_progress()

					# Emit pathway started signal
					pathway_started.emit(pathway_id, pathway.name)

					# Start first step
					_start_current_step()

					return true

					## Complete the current learning step
					## @param success: Whether the step was completed successfully
					## @param data: Optional data about the completion (e.g., assessment results)
					## @return: bool - true if processed successfully
if track_progress and _user_progress.has("pathways"):
if _user_progress.pathways.has(pathway_id):
	if not _user_progress.pathways[pathway_id].steps_completed.has(step_id):
		_user_progress.pathways[pathway_id].steps_completed.append(step_id)

		# Update overall progress
if data.has("score"):
	score = data.score

	if score < MIN_ASSESSMENT_SCORE:
		# Failed assessment
		if adaptive_difficulty:
			# Potentially recommend easier content
			_generate_recommendation("remedial", current_step)
			return false

			# Move to next step or complete pathway
			_current_step_index += 1

			if _current_step_index >= _active_pathway.steps.size():
				# Pathway completed
				_complete_pathway(success)
				return true
				else:
					# Start next step
					_start_current_step()
					return true

					## End the current pathway without completing it
if _user_progress.has("pathways"):
	for pathway_id in _user_progress.pathways.keys():
		if _available_pathways.has(pathway_id):
			total_pathways += 1
if _user_progress.pathways[pathway_id].completed:
	completed_pathways += 1
	completion_counts[difficulty] += 1

	# Generate appropriate recommendation
if total_pathways == 0 or completed_pathways == 0:
	# New user, recommend beginner pathway
	recommendation = _find_pathway_recommendation(PathwayDifficulty.BEGINNER)
	elif completion_counts[PathwayDifficulty.BEGINNER] > 0 and completion_counts[PathwayDifficulty.INTERMEDIATE] == 0:
		# Completed beginner pathways, recommend intermediate
		recommendation = _find_pathway_recommendation(PathwayDifficulty.INTERMEDIATE)
		elif completion_counts[PathwayDifficulty.INTERMEDIATE] > 0 and completion_counts[PathwayDifficulty.ADVANCED] == 0:
			# Completed intermediate pathways, recommend advanced
			recommendation = _find_pathway_recommendation(PathwayDifficulty.ADVANCED)
			elif completion_counts[PathwayDifficulty.ADVANCED] > 0:
				# Completed advanced pathways, recommend professional
				recommendation = _find_pathway_recommendation(PathwayDifficulty.PROFESSIONAL)
				else:
					# Find any incomplete pathway
					recommendation = _find_incomplete_pathway_recommendation()

					if not recommendation.is_empty():
						recommendation_available.emit(recommendation)

						return recommendation

						# === PRIVATE METHODS ===
if track_progress and _user_progress.has("pathways") and _user_progress.pathways.has(pathway_id):
	completion.completed = _user_progress.pathways[pathway_id].completed
	completion.progress = _user_progress.pathways[pathway_id].progress
	completion.last_accessed = _user_progress.pathways[pathway_id].last_accessed

	return completion

if step.content.has("structures") and _selection_manager != null:
	# This would depend on the specific selection API
	# For example, it might highlight or focus on structures
	pass

if track_progress and _user_progress.has("pathways") and _user_progress.pathways.has(pathway_id):
	_user_progress.pathways[pathway_id].completed = success
	_user_progress.pathways[pathway_id].progress = 1.0
	_save_progress()

	# Generate potential recommendation
	if enable_recommendations and success:
		_generate_next_pathway_recommendation(pathway_id)

		# Emit completion signal
		pathway_completed.emit(pathway_id, success, 1.0)

		# Clear active pathway
		_end_active_pathway(success)

if context.has("content") and context.content.has("topics"):
	for topic in context.content.topics:
		# This would look up relevant content for each topic
		# And add it to the recommendation
		pass

		"next_pathway":
			# This is handled by _generate_next_pathway_recommendation
			pass

			if not recommendation.is_empty():
				recommendation_available.emit(recommendation)

if completed_difficulty < PathwayDifficulty.PROFESSIONAL:
	// Try to find a pathway at the next difficulty level
	recommendation = _find_pathway_recommendation(completed_difficulty + 1)

	if recommendation.is_empty():
		// Try to find another pathway at the same difficulty level
		recommendation = _find_pathway_recommendation(completed_difficulty, [completed_pathway_id])

		if not recommendation.is_empty():
			recommendation_available.emit(recommendation)

for id in _available_pathways.keys():
	// Skip excluded pathways
	if exclude_ids.has(id):
		continue

if pathway.difficulty != difficulty:
	continue

	// Check if already completed
if _user_progress.has("pathways") and _user_progress.pathways.has(id):
	completed = _user_progress.pathways[id].completed

	if completed:
		continue

		// Check prerequisites
		if enforce_prerequisites and not _check_prerequisites(pathway):
			continue

			candidates.append({
			"id": id,
			"name": pathway.name,
			"description": pathway.description
			})

			if candidates.is_empty():
				return {}

				// Pick a random candidate
				candidates.shuffle()
return {
"type": "next_pathway",
"title": "Recommended Next Pathway",
"description": "Based on your progress, we recommend this learning pathway.",
"pathway_id": selected.id,
"pathway_name": selected.name,
"pathway_description": selected.description
}

for id in _available_pathways.keys():
if _user_progress.has("pathways") and _user_progress.pathways.has(id):
	completed = _user_progress.pathways[id].completed

	if completed:
		continue

		// Check prerequisites
		if enforce_prerequisites and not _check_prerequisites(pathway):
			continue

			candidates.append({
			"id": id,
			"name": pathway.name,
			"description": pathway.description,
			"difficulty": pathway.difficulty
			})

			if candidates.is_empty():
				return {}

				// Sort by difficulty (prefer easier pathways)
				candidates.sort_custom(func(a, b): return a.difficulty < b.difficulty)

return {
"type": "recommended_pathway",
"title": "Recommended Pathway",
"description": "Continue your learning with this pathway.",
"pathway_id": selected.id,
"pathway_name": selected.name,
"pathway_description": selected.description
}

# === CLEANUP ===

func _validate_setup() -> bool:
	"""Validate that all required dependencies are available"""

	# Get the KnowledgeService reference
	_knowledge_service = get_node_or_null("/root/KnowledgeService")
	if _knowledge_service == null:
		push_error("[LearningPathwayManager] KnowledgeService not found")
		return false

		# Get the BrainStructureSelectionManager reference
		_selection_manager = get_node_or_null("../BrainStructureSelectionManager")
		if _selection_manager == null:
			push_warning("[LearningPathwayManager] BrainStructureSelectionManager not found - limited selection integration")

			# Get the BrainSystemSwitcher reference if available
			_brain_system_switcher = get_node_or_null("../BrainSystemSwitcher")

			return true

func _load_pathway_configurations() -> bool:
	"""Load learning pathway configurations from file"""

	# In a real implementation, this would load from a config file
	# For this example, we'll create some sample pathways programmatically

	# Sample pathways for demonstration
	_available_pathways = {
	"basic_neuroanatomy": {
	"name": "Introduction to Neuroanatomy",
	"description": "Learn the basic structures of the human brain",
	"difficulty": PathwayDifficulty.BEGINNER,
	"estimated_duration": "30 minutes",
	"prerequisites": [],
	"steps": [
	{
	"id": "intro_brain_orientation",
	"name": "Brain Orientation",
	"type": StepType.EXPLORATION,
	"description": "Explore the major orientations of the brain",
	"content": {
	"structures": ["cerebrum", "cerebellum", "brainstem"],
	"system": "WHOLE_BRAIN"
	}
	},
	{
	"id": "cerebral_hemispheres",
	"name": "Cerebral Hemispheres",
	"type": StepType.GUIDED_TOUR,
	"description": "Tour of the cerebral hemispheres",
	"content": {
	"structures": ["frontal_lobe", "parietal_lobe", "temporal_lobe", "occipital_lobe"],
	"system": "HALF_SECTIONAL"
	}
	},
	{
	"id": "basic_assessment",
	"name": "Basic Neuroanatomy Quiz",
	"type": StepType.ASSESSMENT,
	"description": "Test your knowledge of basic neuroanatomy",
	"content": {
	"questions": 5,
	"topics": ["brain_orientation", "major_structures"]
	}
	}
	]
	},

	"limbic_system": {
	"name": "The Limbic System",
	"description": "Explore the structures and functions of the limbic system",
	"difficulty": PathwayDifficulty.INTERMEDIATE,
	"estimated_duration": "45 minutes",
	"prerequisites": ["basic_neuroanatomy"],
	"steps": [
	{
	"id": "limbic_overview",
	"name": "Limbic System Overview",
	"type": StepType.EXPLORATION,
	"description": "Introduction to the limbic system",
	"content": {
	"structures": ["hippocampus", "amygdala", "thalamus"],
	"system": "INTERNAL"
	}
	},
	{
	"id": "memory_circuit",
	"name": "Memory Circuit",
	"type": StepType.GUIDED_TOUR,
	"description": "Tour of structures involved in memory formation",
	"content": {
	"structures": ["hippocampus", "fornix", "mammillary_bodies"],
	"system": "INTERNAL"
	}
	},
	{
	"id": "emotional_circuit",
	"name": "Emotional Circuit",
	"type": StepType.GUIDED_TOUR,
	"description": "Tour of structures involved in emotional processing",
	"content": {
	"structures": ["amygdala", "cingulate_gyrus", "hypothalamus"],
	"system": "INTERNAL"
	}
	},
	{
	"id": "limbic_assessment",
	"name": "Limbic System Quiz",
	"type": StepType.ASSESSMENT,
	"description": "Test your knowledge of the limbic system",
	"content": {
	"questions": 8,
	"topics": ["limbic_structures", "memory_function", "emotion_processing"]
	}
	}
	]
	},

	"clinical_cases_basal_ganglia": {
	"name": "Clinical Cases: Basal Ganglia",
	"description": "Apply knowledge of basal ganglia to clinical scenarios",
	"difficulty": PathwayDifficulty.ADVANCED,
	"estimated_duration": "60 minutes",
	"prerequisites": ["basic_neuroanatomy", "limbic_system"],
	"steps": [
	{
	"id": "basal_ganglia_review",
	"name": "Basal Ganglia Review",
	"type": StepType.EXPLORATION,
	"description": "Review of basal ganglia structures",
	"content": {
	"structures": ["caudate_nucleus", "putamen", "globus_pallidus", "substantia_nigra"],
	"system": "INTERNAL"
	}
	},
	{
	"id": "parkinsons_case",
	"name": "Parkinson's Disease Case",
	"type": StepType.CLINICAL_CASE,
	"description": "Clinical case involving Parkinson's disease",
	"content": {
	"case_id": "pd_case_1",
	"affected_structures": ["substantia_nigra", "striatum"],
	"clinical_presentation": "Resting tremor, bradykinesia, rigidity"
	}
	},
	{
	"id": "huntingtons_case",
	"name": "Huntington's Disease Case",
	"type": StepType.CLINICAL_CASE,
	"description": "Clinical case involving Huntington's disease",
	"content": {
	"case_id": "hd_case_1",
	"affected_structures": ["caudate_nucleus", "putamen"],
	"clinical_presentation": "Chorea, cognitive decline, psychiatric symptoms"
	}
	},
	{
	"id": "clinical_assessment",
	"name": "Clinical Assessment",
	"type": StepType.ASSESSMENT,
	"description": "Test your clinical knowledge of basal ganglia disorders",
	"content": {
	"questions": 10,
	"topics": ["movement_disorders", "basal_ganglia_pathology", "clinical_correlations"]
	}
	}
	]
	}
	}

	return true

func _load_progress() -> bool:
	"""Load user progress from file"""

	# In a real implementation, this would load from a save file
	# For this example, we'll initialize an empty progress structure

	_user_progress = {
	"pathways": {},
	"last_session": Time.get_unix_time_from_system(),
	"total_time": 0
	}

	return true

func _save_progress() -> bool:
	"""Save user progress to file"""

	# In a real implementation, this would save to a file
	# For this example, we'll just update the in-memory structure

	_user_progress.last_session = Time.get_unix_time_from_system()

	return true

func _check_prerequisites(pathway: Dictionary) -> bool:
	"""Check if prerequisites for a pathway are met"""

	if not pathway.has("prerequisites") or pathway.prerequisites.is_empty():
		return true

		if not _user_progress.has("pathways"):
			return false

			for prereq_id in pathway.prerequisites:
				if not _user_progress.pathways.has(prereq_id) or not _user_progress.pathways[prereq_id].completed:
					return false

					return true

func _get_pathway_completion(pathway_id: String) -> Dictionary:
	"""Get completion status for a pathway"""

func _start_current_step() -> void:
	"""Start the current learning step"""

	if _active_pathway.is_empty() or _current_step_index < 0:
		return

		if _current_step_index >= _active_pathway.steps.size():
			return

func _setup_exploration_step(step: Dictionary) -> void:
	"""Set up an exploration step"""

	# Switch to appropriate brain system if specified
	if step.content.has("system") and _brain_system_switcher != null:
func _setup_interactive_step(step: Dictionary) -> void:
	"""Set up an interactive step"""

	# This would set up an interactive exercise
	# Implementation would depend on the specific interaction system
	pass

func _setup_assessment_step(step: Dictionary) -> void:
	"""Set up an assessment step"""

	# This would set up a knowledge assessment
	# Implementation would depend on the specific assessment system
	pass

func _setup_clinical_case_step(step: Dictionary) -> void:
	"""Set up a clinical case step"""

	# This would set up a clinical case scenario
	# Implementation would depend on the specific case system
	pass

func _complete_pathway(success: bool) -> void:
	"""Complete the current pathway"""

	if _active_pathway.is_empty():
		return

func _end_active_pathway(success: bool) -> void:
	"""End the active pathway and clean up"""

	_active_pathway.clear()
	_current_step_index = -1

func _generate_recommendation(type: String, context: Dictionary) -> void:
	"""Generate a contextual recommendation"""

	if not enable_recommendations:
		return

func _generate_next_pathway_recommendation(completed_pathway_id: String) -> void:
	"""Generate a recommendation for the next pathway"""

	if not _available_pathways.has(completed_pathway_id):
		return

func _find_pathway_recommendation(difficulty: int, exclude_ids: Array = []) -> Dictionary:
	"""Find a pathway recommendation at a specific difficulty level"""

func _find_incomplete_pathway_recommendation() -> Dictionary:
	"""Find any incomplete pathway recommendation"""
