## EducationalModuleCoordinator.gd
## Coordinates educational modules for neuroanatomy visualization
##
## This system integrates the various educational enhancement modules into a
## cohesive educational experience. It coordinates between brain system switching,
## comparative anatomy, and structured learning pathways.
##
## @tutorial: neuroanatomy_educational_modules
## @experimental: false

class_name EducationalModuleCoordinator
extends Node

# === SIGNALS ===
## Emitted when a new educational session begins
## @param session_id: Unique identifier for the session
## @param session_type: Type of educational session

signal session_started(session_id: String, session_type: String)

## Emitted when an educational session ends
## @param session_id: Unique identifier for the session
## @param session_duration: Duration of session in seconds
signal session_ended(session_id: String, session_duration: float)

## Emitted when educational content is ready for display
## @param content: Dictionary with educational content
signal educational_content_ready(content: Dictionary)

# === EXPORTS ===
## Default educational mode

@export_enum("Exploration", "Guided", "Structured", "Assessment") var default_mode: int = 0

## Whether to automatically suggest educational content
@export var auto_suggest_content: bool = true

## Whether to collect educational analytics
@export var collect_analytics: bool = true

@export_group("Module Integration")
## Whether to enable brain system switching
@export var enable_system_switching: bool = true

## Whether to enable comparative anatomy features
@export var enable_comparative_anatomy: bool = true

## Whether to enable learning pathways
@export var enable_learning_pathways: bool = true

# === PRIVATE VARIABLES ===

var session_id = "edu_" + str(Time.get_unix_time_from_system())

# Initialize session data
_current_session = {
"id": session_id,
"mode": mode,
"options": options,
"start_time": Time.get_unix_time_from_system(),
"interactions": [],
"structures_viewed": []
}

# Mode-specific initialization
var session_type = ""
0:  # Exploration
session_type = "exploration"
# No specific setup needed

1:  # Guided
session_type = "guided"
var end_time = Time.get_unix_time_from_system()
var duration = end_time - _current_session.start_time

# Update session data
	_current_session.end_time = end_time
	_current_session.duration = duration

	# Generate session summary
var summary = {
	"id": _current_session.id,
	"mode": _current_session.mode,
	"duration": duration,
	"structures_viewed": _current_session.structures_viewed.size(),
	"interactions": _current_session.interactions.size()
	}

	# Clean up based on mode
	match _current_session.mode:
		2:  # Structured
var completed_session = _current_session.duplicate()
	_current_session.clear()

var structure_data = _knowledge_service.get_structure(structure_id)
var educational_content = _enhance_educational_content(structure_data, detail_level)

# Emit content ready signal
	educational_content_ready.emit(educational_content)

var recommendation = {}

# Try to get pathway recommendation if enabled
var structure_id = _currently_selected_structures[0]
var related_structures = _get_related_structures(structure_id)

var comparison_structures = [structure_id]
	comparison_structures.append(related_structures[0])

	recommendation = {
	"type": "comparative_view",
	"title": "Compare Related Structures",
	"description":
		"Enhance your understanding by comparing these related structures.",
		"structures": comparison_structures
		}
		elif _currently_selected_structures.size() > 1:
			# Recommend formal comparison of already selected structures
			recommendation = {
			"type": "comparative_view",
			"title": "Compare Selected Structures",
			"description": "Perform an educational comparison of your selected structures.",
			"structures": _currently_selected_structures
			}

			# If still no recommendation, suggest a system switch
var current_system = _brain_system_switcher.get_current_system()
var suggested_system = (current_system + 1) % 3  # Cycle through systems

	recommendation = {
	"type": "system_switch",
	"title": "Explore Different View",
	"description":
		"Enhance your understanding by switching to a different brain visualization.",
		"system": suggested_system
		}

var enhanced = base_content.duplicate(true)

# Add educational difficulty level
var difficulty = "beginner"
var related = _get_related_structures(base_content.id)
var pathways = _find_pathways_with_structure(base_content.id)
var recommendations = []

# Recommend related structures
var related = _get_related_structures(structure_id)
var pathways = _find_pathways_with_structure(structure_id)
var recommended_system = _get_recommended_system_for_structure(structure_id)
var related_structures = {
	"hippocampus": ["amygdala", "fornix", "thalamus"],
	"amygdala": ["hippocampus", "hypothalamus", "thalamus"],
	"thalamus": ["hypothalamus", "basal_ganglia", "subthalamic_nucleus"],
	"caudate_nucleus": ["putamen", "globus_pallidus", "thalamus"],
	"putamen": ["caudate_nucleus", "globus_pallidus", "substantia_nigra"],
	"frontal_lobe": ["parietal_lobe", "temporal_lobe", "corpus_callosum"],
	"parietal_lobe": ["frontal_lobe", "occipital_lobe", "temporal_lobe"],
	"temporal_lobe": ["frontal_lobe", "parietal_lobe", "hippocampus"],
	"occipital_lobe": ["parietal_lobe", "temporal_lobe", "thalamus"],
	"cerebellum": ["brainstem", "pons", "medulla"],
	"brainstem": ["cerebellum", "midbrain", "pons"],
	"corpus_callosum": ["frontal_lobe", "parietal_lobe", "lateral_ventricle"]
	}

var matching_pathways = []

# This would normally search through available pathways
# For demonstration, we'll check our known pathways

# Check basic neuroanatomy pathway
var internal_structures = [
	"hippocampus",
	"amygdala",
	"thalamus",
	"hypothalamus",
	"caudate_nucleus",
	"putamen",
	"globus_pallidus",
	"substantia_nigra",
	"subthalamic_nucleus"
	]

var sectional_structures = ["corpus_callosum", "lateral_ventricle", "fornix"]

var surface_structures = [
	"frontal_lobe",
	"parietal_lobe",
	"temporal_lobe",
	"occipital_lobe",
	"cerebellum",
	"brainstem"
	]

var structures_count = session.structures_viewed.size()
var interactions_count = session.interactions.size()
var duration_minutes = session.duration / 60.0

var structure_id = ""

var _brain_system_switcher: BrainSystemSwitcher
var _comparative_anatomy: ComparativeAnatomyService
var _learning_pathway: LearningPathwayManager
var _knowledge_service: Node
var _selection_manager: Node
var _is_initialized: bool = false
var _current_session: Dictionary = {}
var _currently_selected_structures: Array = []


# === LIFECYCLE METHODS ===

func _ready() -> void:
	"""Initialize the EducationalModuleCoordinator component"""
	_initialize()


	# === PUBLIC METHODS ===
	## Start a new educational session
	## @param mode: Educational mode (Exploration, Guided, etc.)
	## @param options: Additional session options
	## @return: bool - true if session started successfully
func _initialize() -> void:
	"""Initialize the component with default settings"""

	# Setup validation
	if not _validate_setup():
		push_error("[EducationalModuleCoordinator] Failed to initialize - invalid setup")
		return

		# Initialize subsystems
		_setup_connections()

		_is_initialized = true
		print("[EducationalModuleCoordinator] Initialized successfully")


func _exit_tree() -> void:
	"""Clean up when node is removed from tree"""

	# End any active session
	if not _current_session.is_empty():
		end_educational_session()

func start_educational_session(mode: int, options: Dictionary = {}) -> bool:
	"""Start a new educational session"""

	if not _is_initialized:
		push_error("[EducationalModuleCoordinator] Not initialized")
		return false

		# End any current session
		if not _current_session.is_empty():
			end_educational_session()

			# Create session identifier
func end_educational_session() -> Dictionary:
	"""End the current educational session"""

	if _current_session.is_empty():
		return {}

		# Calculate session duration
func switch_brain_system(system: int, transition_style: int = -1) -> bool:
	"""Switch to a different brain visualization system"""

	if not _is_initialized:
		push_error("[EducationalModuleCoordinator] Not initialized")
		return false

		if not enable_system_switching or _brain_system_switcher == null:
			push_error("[EducationalModuleCoordinator] Brain system switching not enabled")
			return false

			# Record interaction if in a session
			if not _current_session.is_empty():
				_current_session.interactions.append(
				{
				"type": "system_switch",
				"system": system,
				"time": Time.get_unix_time_from_system() - _current_session.start_time
				}
				)

				# Perform the system switch
				return _brain_system_switcher.switch_to_system(system, transition_style)


				## Start a comparative anatomy view
				## @param structure_ids: Array of structure IDs to compare
				## @param comparison_type: Type of comparison to perform
				## @return: bool - true if comparison started successfully
func start_comparative_view(structure_ids: Array, comparison_type: int = -1) -> bool:
	"""Start a comparative anatomy view"""

	if not _is_initialized:
		push_error("[EducationalModuleCoordinator] Not initialized")
		return false

		if not enable_comparative_anatomy or _comparative_anatomy == null:
			push_error("[EducationalModuleCoordinator] Comparative anatomy not enabled")
			return false

			# Record interaction if in a session
			if not _current_session.is_empty():
				_current_session.interactions.append(
				{
				"type": "comparative_view",
				"structures": structure_ids,
				"comparison_type": comparison_type,
				"time": Time.get_unix_time_from_system() - _current_session.start_time
				}
				)

				# Start the comparative view
				return _comparative_anatomy.start_comparison(structure_ids, comparison_type)


				## Start a learning pathway
				## @param pathway_id: Identifier of the pathway to start
				## @return: bool - true if pathway started successfully
func start_learning_pathway(pathway_id: String) -> bool:
	"""Start a learning pathway"""

	if not _is_initialized:
		push_error("[EducationalModuleCoordinator] Not initialized")
		return false

		if not enable_learning_pathways or _learning_pathway == null:
			push_error("[EducationalModuleCoordinator] Learning pathways not enabled")
			return false

			# Record interaction if in a session
			if not _current_session.is_empty():
				_current_session.interactions.append(
				{
				"type": "pathway_start",
				"pathway_id": pathway_id,
				"time": Time.get_unix_time_from_system() - _current_session.start_time
				}
				)

				# Start the pathway
				if _learning_pathway.start_pathway(pathway_id):
					# Start a structured educational session if not already in one
					if _current_session.is_empty():
						start_educational_session(2, {"pathway_id": pathway_id})
						return true

						return false


						## Get educational content for a structure
						## @param structure_id: Identifier of the structure
						## @param detail_level: Level of educational detail (1-3)
						## @return: Dictionary with educational content
func get_educational_content(structure_id: String, detail_level: int = 2) -> Dictionary:
	"""Get educational content for a structure"""

	if not _is_initialized or _knowledge_service == null:
		return {}

		# Get structure data
func generate_recommendation() -> Dictionary:
	"""Generate a personalized educational recommendation"""

	if not _is_initialized:
		return {}

func _fix_orphaned_code():
	if (
	options.has("starting_system")
	and enable_system_switching
	and _brain_system_switcher != null
	):
		_brain_system_switcher.switch_to_system(options.starting_system)

		2:  # Structured
		session_type = "structured"
		if options.has("pathway_id") and enable_learning_pathways and _learning_pathway != null:
			_learning_pathway.start_pathway(options.pathway_id)

			3:  # Assessment
			session_type = "assessment"
			# Would initialize assessment mode

			# Emit session started signal
			session_started.emit(session_id, session_type)

			return true


			## End the current educational session
			## @return: Dictionary with session summary
func _fix_orphaned_code():
	if enable_learning_pathways and _learning_pathway != null:
		_learning_pathway.end_current_pathway()

		# Emit session ended signal
		session_ended.emit(_current_session.id, duration)

		# Save analytics if enabled
		if collect_analytics:
			_save_session_analytics(_current_session)

			# Clear current session
func _fix_orphaned_code():
	return summary


	## Switch to a different brain visualization system
	## @param system: Brain system to switch to
	## @param transition_style: Visual style for the transition
	## @return: bool - true if switch initiated successfully
func _fix_orphaned_code():
	if structure_data.is_empty():
		return {}

		# Record view if in a session
		if not _current_session.is_empty():
			if not _current_session.structures_viewed.has(structure_id):
				_current_session.structures_viewed.append(structure_id)

				_current_session.interactions.append(
				{
				"type": "view_structure",
				"structure_id": structure_id,
				"time": Time.get_unix_time_from_system() - _current_session.start_time
				}
				)

				# Enhance with educational metadata
func _fix_orphaned_code():
	return educational_content


	## Generate a personalized educational recommendation
	## @return: Dictionary with recommendation
func _fix_orphaned_code():
	if enable_learning_pathways and _learning_pathway != null:
		recommendation = _learning_pathway.generate_recommendation()

		# If no pathway recommendation, try comparative view
		if (
		recommendation.is_empty()
		and enable_comparative_anatomy
		and _comparative_anatomy != null
		and _currently_selected_structures.size() > 0
		):
			# Generate potential comparison recommendation
			if _currently_selected_structures.size() == 1:
				# Recommend comparing with related structures
func _fix_orphaned_code():
	if related_structures.size() > 0:
func _fix_orphaned_code():
	if recommendation.is_empty() and enable_system_switching and _brain_system_switcher != null:
func _fix_orphaned_code():
	return recommendation


	# === PRIVATE METHODS ===
func _fix_orphaned_code():
	if base_content.has("educationalLevel"):
		difficulty = base_content.educationalLevel
		enhanced.difficulty = difficulty

		# Adjust content based on detail level
		match detail_level:
			1:  # Basic level
			# Simplify content for beginners
			if enhanced.has("functions") and enhanced.functions.size() > 2:
				enhanced.functions = enhanced.functions.slice(0, 2)

				# Remove advanced content
				enhanced.erase("commonPathologies")

				2:  # Standard level
				# Default content level, no adjustments needed
				pass

				3:  # Advanced level
				# Add related structures if available
func _fix_orphaned_code():
	if not related.is_empty():
		enhanced.related_structures = related

		# Add potential pathways that cover this structure
		if enable_learning_pathways and _learning_pathway != null:
func _fix_orphaned_code():
	if not pathways.is_empty():
		enhanced.related_pathways = pathways

		# Add educational recommendations if enabled
		if auto_suggest_content:
			enhanced.recommendations = _generate_content_recommendations(base_content.id)

			return enhanced


func _fix_orphaned_code():
	if not related.is_empty():
		recommendations.append(
		{
		"type": "related_structures",
		"title": "Explore Related Structures",
		"structures": related
		}
		)

		# Recommend relevant pathways
		if enable_learning_pathways and _learning_pathway != null:
func _fix_orphaned_code():
	if not pathways.is_empty():
		recommendations.append(
		{
		"type": "learning_pathway",
		"title": "Suggested Learning Pathway",
		"pathway_id": pathways[0]
		}
		)

		# Recommend appropriate system view
		if enable_system_switching and _brain_system_switcher != null:
func _fix_orphaned_code():
	if recommended_system >= 0:
		recommendations.append(
		{
		"type": "system_view",
		"title": "Optimal Viewing Perspective",
		"system": recommended_system
		}
		)

		return recommendations


func _fix_orphaned_code():
	if related_structures.has(structure_id):
		return related_structures[structure_id]

		return []


func _fix_orphaned_code():
	if (
	structure_id
	in [
	"cerebrum",
	"cerebellum",
	"brainstem",
	"frontal_lobe",
	"parietal_lobe",
	"temporal_lobe",
	"occipital_lobe"
	]
	):
		matching_pathways.append("basic_neuroanatomy")

		# Check limbic system pathway
		if (
		structure_id
		in [
		"hippocampus",
		"amygdala",
		"thalamus",
		"fornix",
		"mammillary_bodies",
		"cingulate_gyrus",
		"hypothalamus"
		]
		):
			matching_pathways.append("limbic_system")

			# Check basal ganglia pathway
			if (
			structure_id
			in [
			"caudate_nucleus",
			"putamen",
			"globus_pallidus",
			"substantia_nigra",
			"subthalamic_nucleus",
			"striatum"
			]
			):
				matching_pathways.append("clinical_cases_basal_ganglia")

				return matching_pathways


func _fix_orphaned_code():
	if structure_id in internal_structures:
		return _brain_system_switcher.BrainSystem.INTERNAL

		# Cross-sectional structures are best viewed in half-brain view
func _fix_orphaned_code():
	if structure_id in sectional_structures:
		return _brain_system_switcher.BrainSystem.HALF_SECTIONAL

		# Surface structures are best viewed in whole brain view
func _fix_orphaned_code():
	if structure_id in surface_structures:
		return _brain_system_switcher.BrainSystem.WHOLE_BRAIN

		return _brain_system_switcher.BrainSystem.WHOLE_BRAIN  # Default recommendation


func _fix_orphaned_code():
	print(
	(
	"[EducationalModuleCoordinator] Session analytics - Duration: %.1f minutes, Structures viewed: %d, Interactions: %d"
	% [duration_minutes, structures_count, interactions_count]
	)
	)


	# === EVENT HANDLERS ===
func _fix_orphaned_code():
	if _knowledge_service != null:
		# This assumes the knowledge service has a normalization method
		structure_id = _knowledge_service._normalize_structure_name(structure_name)
		else:
			# Simple normalization fallback
			structure_id = structure_name.to_lower().replace(" ", "_")

			# Update selected structures tracking
			if not _currently_selected_structures.has(structure_id):
				_currently_selected_structures.append(structure_id)

				# Get educational content if in a session
				if not _current_session.is_empty():
					get_educational_content(structure_id)


func _validate_setup() -> bool:
	"""Validate that all required dependencies are available"""

	# Get the KnowledgeService reference
	_knowledge_service = get_node_or_null("/root/KnowledgeService")
	if _knowledge_service == null:
		push_error("[EducationalModuleCoordinator] KnowledgeService not found")
		return false

		# Get the BrainStructureSelectionManager reference
		_selection_manager = get_node_or_null("../BrainStructureSelectionManager")
		if _selection_manager == null:
			push_warning(
			"[EducationalModuleCoordinator] BrainStructureSelectionManager not found - limited selection integration"
			)

			# Get optional module references
			if enable_system_switching:
				_brain_system_switcher = get_node_or_null("../BrainSystemSwitcher")
				if _brain_system_switcher == null:
					push_warning(
					"[EducationalModuleCoordinator] BrainSystemSwitcher not found - system switching disabled"
					)
					enable_system_switching = false

					if enable_comparative_anatomy:
						_comparative_anatomy = get_node_or_null("../ComparativeAnatomyService")
						if _comparative_anatomy == null:
							push_warning(
							"[EducationalModuleCoordinator] ComparativeAnatomyService not found - comparative anatomy disabled"
							)
							enable_comparative_anatomy = false

							if enable_learning_pathways:
								_learning_pathway = get_node_or_null("../LearningPathwayManager")
								if _learning_pathway == null:
									push_warning(
									"[EducationalModuleCoordinator] LearningPathwayManager not found - learning pathways disabled"
									)
									enable_learning_pathways = false

									return true


func _setup_connections() -> void:
	"""Setup signal connections and dependencies"""

	# Connect to selection manager if available
	if _selection_manager != null:
		if _selection_manager.has_signal("structure_selected"):
			_selection_manager.structure_selected.connect(_on_structure_selected)
			if _selection_manager.has_signal("selection_cleared"):
				_selection_manager.selection_cleared.connect(_on_selection_cleared)

				# Connect to brain system switcher if available
				if _brain_system_switcher != null:
					if _brain_system_switcher.has_signal("transition_completed"):
						_brain_system_switcher.transition_completed.connect(_on_brain_system_changed)

						# Connect to comparative anatomy service if available
						if _comparative_anatomy != null:
							if _comparative_anatomy.has_signal("comparison_started"):
								_comparative_anatomy.comparison_started.connect(_on_comparison_started)

								# Connect to learning pathway manager if available
								if _learning_pathway != null:
									if _learning_pathway.has_signal("pathway_completed"):
										_learning_pathway.pathway_completed.connect(_on_pathway_completed)


func _enhance_educational_content(base_content: Dictionary, detail_level: int) -> Dictionary:
	"""Enhance structure data with educational metadata"""

	if base_content.is_empty():
		return {}

func _generate_content_recommendations(structure_id: String) -> Array:
	"""Generate educational content recommendations for a structure"""

func _get_related_structures(structure_id: String) -> Array:
	"""Get related structures for educational purposes"""

	# This would normally query the knowledge database for functionally
	# or anatomically related structures

	# For demonstration, we'll use a basic lookup table
func _find_pathways_with_structure(structure_id: String) -> Array:
	"""Find learning pathways that include a specific structure"""

	if not enable_learning_pathways or _learning_pathway == null:
		return []

func _get_recommended_system_for_structure(structure_id: String) -> int:
	"""Get the recommended brain system view for a structure"""

	# Internal structures are best viewed in the internal structures view
func _save_session_analytics(session: Dictionary) -> void:
	"""Save session analytics data"""

	# In a real implementation, this would save to a file or database
	# For this example, we'll just print a summary

func _on_structure_selected(structure_name: String, mesh: Node) -> void:
	"""Handle structure selection events"""

	# Get normalized structure ID
func _on_selection_cleared() -> void:
	"""Handle selection cleared events"""

	_currently_selected_structures.clear()


func _on_brain_system_changed(system_name: String) -> void:
	"""Handle brain system change events"""

	# Record in session if active
	if not _current_session.is_empty():
		_current_session.interactions.append(
		{
		"type": "system_change_completed",
		"system_name": system_name,
		"time": Time.get_unix_time_from_system() - _current_session.start_time
		}
		)


func _on_comparison_started(comparison_type: String, structure_ids: Array) -> void:
	"""Handle comparison started events"""

	# Record in session if active
	if not _current_session.is_empty():
		_current_session.interactions.append(
		{
		"type": "comparison_started",
		"comparison_type": comparison_type,
		"structures": structure_ids,
		"time": Time.get_unix_time_from_system() - _current_session.start_time
		}
		)


func _on_pathway_completed(pathway_id: String, success: bool, score: float) -> void:
	"""Handle pathway completed events"""

	# Record in session if active
	if not _current_session.is_empty():
		_current_session.interactions.append(
		{
		"type": "pathway_completed",
		"pathway_id": pathway_id,
		"success": success,
		"score": score,
		"time": Time.get_unix_time_from_system() - _current_session.start_time
		}
		)

		# Recommend next pathway if successful
		if success and auto_suggest_content:
			# Auto-suggest would happen here


			# === CLEANUP ===
